@@ -37,8 +37,10 @@ public class MCTSMetrics implements IMetricsCollection {
                 records.put("MeanLeafDepth", treeStats.meanLeafDepth);
                 records.put("MeanNodeDepth", treeStats.meanNodeDepth);
                 records.put("Nodes", treeStats.totalNodes);
+                records.put("LeafNodes", treeStats.totalLeaves);
                 records.put("OneActionNodes", treeStats.oneActionNodes);
                 records.put("MeanActionsAtNode", treeStats.meanActionsAtNode);
+                records.put("MeanActionsExpanded", treeStats.meanActionsExpanded);
                 records.put("RolloutLength", mctsPlayer.root.rolloutActionsTaken / (double) visits);
                 records.put("NodeClashes", mctsPlayer.root.nodeClash);
                 OptionalInt maxVisits = Arrays.stream(root.actionVisits()).max();
@@ -68,8 +70,10 @@ public class MCTSMetrics implements IMetricsCollection {
             cols.put("MeanLeafDepth", Double.class);
             cols.put("MeanNodeDepth", Double.class);
             cols.put("Nodes", Integer.class);
+            cols.put("LeafNodes", Integer.class);
             cols.put("OneActionNodes", Integer.class);
             cols.put("MeanActionsAtNode", Double.class);
+            cols.put("MeanActionsExpanded", Double.class);
             cols.put("RolloutLength", Double.class);
             cols.put("NodeClashes", Integer.class);
             cols.put("maxVisitProportion", Double.class);
@@ -88,27 +92,28 @@ public class MCTSMetrics implements IMetricsCollection {
         @Override
         protected boolean _run(MetricsGameListener listener, Event e, Map<String, Object> records) {
             AbstractPlayer player = listener.getGame().getPlayers().get(e.state.getCurrentPlayer());
-            if (player instanceof MCTSPlayer) {
-                MCTSPlayer mctsPlayer = (MCTSPlayer) player;
+            if (player instanceof MCTSPlayer mctsPlayer) {
                 List<SingleTreeNode> otherRoots;
                 if (mctsPlayer.root instanceof MultiTreeNode) {
                     otherRoots = Arrays.stream(((MultiTreeNode) mctsPlayer.root).roots).filter(Objects::nonNull)
                             .filter(node -> node.decisionPlayer != e.state.getCurrentPlayer())
-                            .collect(Collectors.toList());
+                            .toList();
                     if (otherRoots.isEmpty())
                         return false; // can happen at end of game if other players have no moves
                 } else {
                     return false;  // nothing to record
                 }
-                List<TreeStatistics> treeStats = otherRoots.stream().map(TreeStatistics::new).collect(Collectors.toList());
+                List<TreeStatistics> treeStats = otherRoots.stream().map(TreeStatistics::new).toList();
                 records.put("PlayerType", mctsPlayer.toString());
                 records.put("PlayerID", e.state.getCurrentPlayer());
                 records.put("MaxDepth", treeStats.stream().mapToInt(ts -> ts.depthReached).average().orElse(0.0));
                 records.put("MeanLeafDepth", treeStats.stream().mapToDouble(ts -> ts.meanLeafDepth).average().orElse(0.0));
                 records.put("MeanNodeDepth", treeStats.stream().mapToDouble(ts -> ts.meanNodeDepth).average().orElse(0.0));
                 records.put("Nodes", treeStats.stream().mapToInt(ts -> ts.totalNodes).average().orElse(0.0));
+                records.put("LeafNodes", treeStats.stream().mapToInt(ts -> ts.totalLeaves).average().orElse(0.0));
                 records.put("OneActionNodes", treeStats.stream().mapToInt(ts -> ts.oneActionNodes).average().orElse(0.0));
                 records.put("MeanActionsAtNode", treeStats.stream().mapToDouble(ts -> ts.meanActionsAtNode).average().orElse(0.0));
+                records.put("MeanActionsExpanded", treeStats.stream().mapToDouble(ts -> ts.meanActionsExpanded).average().orElse(0.0));
                 records.put("ActionsAtRoot", otherRoots.stream().mapToInt(node -> node.actionValues.size()).average().orElse(0.0));
                 return true;
             }
@@ -129,8 +134,10 @@ public class MCTSMetrics implements IMetricsCollection {
             cols.put("MeanLeafDepth", Double.class);
             cols.put("MeanNodeDepth", Double.class);
             cols.put("Nodes", Double.class);
+            cols.put("LeafNodes", Double.class);
             cols.put("OneActionNodes", Double.class);
             cols.put("MeanActionsAtNode", Double.class);
+            cols.put("MeanActionsExpanded", Double.class);
             cols.put("ActionsAtRoot", Double.class);
             return cols;
         }
