@@ -22,6 +22,7 @@ public class TreeStatistics {
     public double[] leafDistribution;
     public int maxActionsAtNode;
     public double meanActionsAtNode;
+    public double meanActionsExpanded;
     public int oneActionNodes;
 
 
@@ -34,9 +35,16 @@ public class TreeStatistics {
         nodeDistribution = IntStream.range(0, depthReached + 1)
                 .mapToDouble(i -> byDepth.getOrDefault(i, new ArrayList<>()).size() / (double) totalNodes)
                 .toArray();
+        totalLeaves = (int) transpositionMap.values().stream().filter(n -> n.nVisits <= root.params.initialiseVisits).count();
         meanActionsAtNode = transpositionMap.values().stream().mapToInt(n -> n.actionValues.size()).sum() / (double) totalNodes;
+        meanActionsExpanded = transpositionMap.values().stream()
+                .mapToInt(
+                        n -> (int) n.actionValues.values().stream()
+                                .filter(stats -> stats.nVisits > root.params.initialiseVisits)
+                                .count()
+                ).sum() / (double) Math.max(totalNodes - totalLeaves, 1);
         maxActionsAtNode = transpositionMap.values().stream().mapToInt(n -> n.actionValues.size()).max().orElse(0);
-        totalLeaves = (int) transpositionMap.values().stream().filter(n -> n.nVisits == 0).count();
+
         // totalTerminalNodes = (int) transpositionMap.values().stream().filter(n -> !n.state.isNotTerminal()).count();
         leafDistribution = IntStream.range(0, depthReached + 1)
                 .mapToDouble(i -> byDepth.getOrDefault(i, new ArrayList<>()).stream().filter(n -> n.nVisits == 0).count() / (double) totalLeaves)
@@ -68,6 +76,7 @@ public class TreeStatistics {
         int greatestDepth = 0;
         int maxActions = 0;
         int totalActions = 0;
+        int expandedActions = 0;
         int oneAction = 0;
         while (!nodeQueue.isEmpty()) {
             SingleTreeNode node = nodeQueue.poll();
@@ -76,6 +85,8 @@ public class TreeStatistics {
                 if (node.terminalNode)
                     gameTerminalNodesAtDepth[node.depth]++;
                 totalActions += node.actionValues.size();
+                // We have expanded an action if it has been visited more often than initialiseVisits
+                expandedActions += (int) node.actionValues.values().stream().filter(stats -> stats.nVisits > root.params.initialiseVisits).count();
                 if (node.actionValues.size() == 1)
                     oneAction++;
                 if (node.actionValues.size() > maxActions)
@@ -84,11 +95,11 @@ public class TreeStatistics {
                         .filter(Objects::nonNull)
                         .flatMap(Arrays::stream)
                         .filter(Objects::nonNull)
-                        .collect(toList())) {
+                        .toList()) {
                     if (child != null)
                         nodeQueue.add(child);
                 }
-                if (node.actionValues.values().stream().allMatch(stats -> stats.nVisits == 0))
+                if (node.actionValues.values().stream().allMatch(stats -> stats.nVisits <= root.params.initialiseVisits))
                     leavesAtDepth[node.depth]++;
             }
             if (node.depth > greatestDepth)
@@ -99,9 +110,10 @@ public class TreeStatistics {
         depthReached = greatestDepth;
         totalNodes = Arrays.stream(nodesAtDepth).sum();
         oneActionNodes = oneAction;
+        totalLeaves = Arrays.stream(leavesAtDepth).sum();
 
         meanActionsAtNode = (double) totalActions / totalNodes;
-        totalLeaves = Arrays.stream(leavesAtDepth).sum();
+        meanActionsExpanded = (double) expandedActions / Math.max(totalNodes - totalLeaves, 1);
         //   totalTerminalNodes = Arrays.stream(gameTerminalNodesAtDepth).sum();
         nodeDistribution = Arrays.stream(nodesAtDepth, 0, Math.min(depthReached + 1, maxDepth)).asDoubleStream().map(i -> i / totalNodes).toArray();
         leafDistribution = Arrays.stream(leavesAtDepth, 0, Math.min(depthReached + 1, maxDepth)).asDoubleStream().map(i -> i / totalLeaves).toArray();
